--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input type="text" id="city" placeholder="City">
             <input type="submit" id="check" value="Go">
         </div>
-        <img src="tempicons/clouds.svg" alt="" id="tempIcon">
+        <img src="clouds.svg" alt="" id="tempIcon">
         <div class="flex">
             <h2 id="weatherCountry">Cityname</h2>
             <h2 id="temperature">0°<strong>C</strong></h2>
